--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,19 @@
     transform: rotate(360deg);
   }
 }
+
+.ChartContainer {
+  margin-top: 20px;
+}
+
+.ChartContainer__header {
+  margin-bottom: 10px;
+  margin-top: 10px;
+  size: 24px;
+}
+
+.Container__charts {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
